Add discord link, add block explorer link in header, fix text centering in downloads section, fix img scaling on mobile, remove unneeded .min.css files.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Solo | Pool Resistant, private cryptocurrency.</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -22,7 +22,7 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
   <!-- Custom styles for this template -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
@@ -47,6 +47,9 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://explorer.minesolo.com/">Block Explorer</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -55,7 +58,7 @@
   <!-- Header -->
   <header class="masthead bg-secondary text-white text-center">
     <div class="container">
-      <img src="img/solo/solo_word_logo_white.png" alt="" width="600">
+      <img class="img-fluid d-block mx-auto" src="img/solo/solo_word_logo_white.png" alt="">
       <h2 class="font-weight-light mb-0">Pool Resistant, private cryptocurrency.</h2>
     </div>
   </header>
@@ -87,7 +90,7 @@
 		<p class="lead">Adaptive Reward based on historical data - emission formula slightly decreases block reward each block as a function of all coinbase transaction amounts previously generated. Reward for blocks 1-88,000 based on a speed factor per minute of 22, resulting in a reward ranging from ~549.76 to ~548.32.</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Reward for blocks 88,001 and greater based on a speed factor per minute of 25, resulting in a reward starting at 4,386.53 in block 88,001. See the latest <a href="http://explorer.minesolo.com/">block</a> coinbase transaction amount for the current <a href="http://explorer.minesolo.com/">block reward.</p>
+		<p class="lead">Reward for blocks 88,001 and greater based on a speed factor per minute of 25, resulting in a reward starting at 4,386.53 in block 88,001. See the latest <a href="http://explorer.minesolo.com/">block</a> coinbase transaction amount for the current <a href="http://explorer.minesolo.com/">block reward.</a></p>
         </div>
     </div>
   </section>
@@ -104,7 +107,7 @@
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
             </div>
-            <img class="img-fluid" src="img/solo/solo_logo_teal_grey.png" alt="">
+            <img class="img-fluid" src="img/solo/linux_grey.png" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -114,7 +117,7 @@
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
             </div>
-            <img class="img-fluid" src="img/solo/solo_logo_teal_grey.png" alt="">
+            <img class="img-fluid" src="img/solo/windows_grey.png" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -135,6 +138,7 @@
   <section id="contact">
     <div class="container">
       <h2 class="text-center text-uppercase text-secondary mb-5">Contact The Team</h2>
+      <a href="https://discord.gg/K62KCcm"><img class="img-fluid d-block mx-auto" src="img/Discord-Logo+Wordmark-Black.png" alt=""></a>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
@@ -191,8 +195,8 @@
           </ul>
         </div>
         <div class="col-md-4">
-          <h4 class="text-uppercase mb-4">Placeholder</h4>
-          <p class="lead mb-0">Soon™
+          <h4 class="text-uppercase mb-5">Inspiration</h4>
+          <p class="lead mb-0">"Proof-of-work also solves the problem of determining representation in majority decisionmaking.  If the majority were based on one-IP-address-one-vote, it could be subverted by anyone able to allocate many IPs. Proof-of-work is essentially one-CPU-one-vote." Satoshi Nakamoto
         </div>
       </div>
     </div>
