--- a/legal.html
+++ b/legal.html
@@ -47,7 +47,7 @@
 
     <h3 id="exclusion-of-limitations-and-disclaimers">EXCLUSION OF LIMITATIONS AND DISCLAIMERS</h3>
 
-    <p>BECAUSE SOME JURISDICTIONS DO NOT ALLOW THE DISCLAIMER OF WARRANTIES, OR THE EXCLUSION OR LIMITATION OF LIABILITY FOR CONSEQUENTIAL OR INCIDENTAL DAMAGES, IN SUCH JURISDICTIONS THE Solo PROJECT'S LIABILITY IS LIMITED TO THE GREATEST EXTENT PERMITTED BY LAW.</p>
+    <p>BECAUSE SOME JURISDICTIONS DO NOT ALLOW THE DISCLAIMER OF WARRANTIES, OR THE EXCLUSION OR LIMITATION OF LIABILITY FOR CONSEQUENTIAL OR INCIDENTAL DAMAGES, IN SUCH JURISDICTIONS THE SOLO PROJECT'S LIABILITY IS LIMITED TO THE GREATEST EXTENT PERMITTED BY LAW.</p>
 
     <h3 id="general">General</h3>
 
