--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <header class="masthead bg-secondary text-white text-center">
     <div class="container">
       <img class="img-fluid d-block mx-auto" src="img/solo/solo_word_logo_white.png" alt="">
-      <h2 class="font-weight-light mb-0">Pool Resistant, private cryptocurrency.</h2>
+      <h2 class="font-weight-light mb-0">Pool resistant, private cryptocurrency.</h2>
     </div>
   </header>
 
