--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Solo | Pool Resistant, private cryptocurrency.</title>
+  <title>Solo | Pool resistant, private cryptocurrency.</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -188,7 +188,7 @@
           <h4 class="text-uppercase mb-4">Around the Web</h4>
           <ul class="list-inline mb-0">
             <li class="list-inline-item">
-              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.twitter.com/Solo-XSL/">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.twitter.com/SoloXsl/">
                 <i class="fab fa-fw fa-twitter"></i>
               </a>
             </li>
