--- a/legal.html
+++ b/legal.html
@@ -25,11 +25,15 @@
 
     <p>The Solo Project takes many precautions to ensure the files available for downloading through this website are not tampered with, and where appropriate SHA256 hashes are provided for end users to confirm they have downloaded the correct file. Nonetheless, The Solo Project does not guarantee that files available for downloading through this website will be free of infection or viruses or other code that may have contaminating or destructive properties. You are responsible for implementing sufficient procedures and checkpoints to satisfy your particular requirements for integrity, security and accuracy of data input and output, and for maintaining a means external to the site for the reconstruction of any lost data. It is almost always advisable to check the SHA256 hashes of the files you have downloaded, and if in any doubt consider <a href="https://github.com/solo-project/Solo">compiling Solo from the source code</a>.</p>
 
-    <h3 id="offsite-links">Offsite Links</h3>
+    <h3 id="links-to-other-sites">Links to Other Sites</h3>
 
-    <p>As a convenience to Users, the The Solo Project website and services may provide links to other sites or resources. Because we do not review or have no control over such sites and resources, The Solo Project shall not be responsible or liable for use of or reliance on any content, products, services or information at such sites or resources. Inclusion of any links does not imply any endorsement, affiliation, approval, association or sponsorship by The Solo Project of the linked websites, resources, their operators or owners. When you select a link, you may be leaving our website. The information available on Third Parties' websites may have certain restrictions on its use or distribution which differ from these TOU.</p>
+    <p>Our content and events listings may contain links to other sites. If you click on a third-party link, you will be directed to that site.
 
-    <h3 id="no-Solo-financial-services">No Solo Financial Services</h3>
+These links are purely for informational purposes and do not constitute any endorsement of the linked site’s operator or its content.
+
+Therefore, we strongly advise you to review the Privacy Policy and Terms and Conditions of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
+
+    <h3 id="no-solo-financial-services">No Solo Financial Services</h3>
 
     <p>This website does not store, sell, buy, send, or receive Solo. All activities related to the ownership and transfer of Solo currency units is done on the decentralized Solo network, of which this website is not an active participant.</p>
 
@@ -39,11 +43,13 @@
 
     <h3 id="disclaimer-of-warranties">DISCLAIMER OF WARRANTIES</h3>
 
-    <p>THE Solo PROJECT DISCLAIMS ALL WARRANTIES, REPRESENTATIONS AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE USE OF THIS WEBSITE AND ITS SERVICES, OR THE ACCURACY, COMPLETENESS, TIMELINESS OR CURRENTNESS OF ITS CONTENT, IN ANY WAY AND FOR ANY PURPOSE.</p>
+    <p>The Solo Project and its associates attempt to be as accurate as possible. However, The Solo Project does not warrant that the content of this site is accurate, complete, reliable, current, or error-free.
+
+DISCLAIMER OF WARRANTIES AND LIMITATION OF LIABILITY: THIS SITE IS PROVIDED BY THE SOLO PROJECT ON AN “AS IS” AND “AS AVAILABLE” BASIS. THE SOLO PROJECT MAKES NO REPRESENTATIONS OR WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED, AS TO THE OPERATION OF THIS SITE OR THE INFORMATION, CONTENT, MATERIALS, OR PRODUCTS INCLUDED ON THIS SITE. YOU EXPRESSLY AGREE THAT YOUR USE OF THIS SITE IS AT YOUR SOLE RISK. TO THE FULL EXTENT PERMISSIBLE BY APPLICABLE LAW, THE SOLO PROJECT DISCLAIMS ALL WARRANTIES, EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE SOLO PROJECT DOES NOT WARRANT THAT THIS SITE, ITS SERVERS, OR E-MAIL SENT FROM THE SOLO PROJECT ARE FREE OF VIRUSES OR OTHER HARMFUL COMPONENTS. THE SOLO PROJECT WILL NOT BE LIABLE FOR ANY DAMAGES OF ANY KIND ARISING FROM THE USE OF THIS SITE, INCLUDING, BUT NOT LIMITED TO DIRECT, INDIRECT, INCIDENTAL, PUNITIVE, AND CONSEQUENTIAL DAMAGES.</p>
 
     <h3 id="exclusion-of-consequential-damages">EXCLUSION OF CONSEQUENTIAL DAMAGES</h3>
 
-    <p>IN NO EVENT WILL THE Solo PROJECT BE LIABLE FOR ANY INCIDENTAL, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY OR INDIRECT DAMAGES ARISING OUT OF THE USE OF OR INABILITY TO USE THIS WEBSITE OR ANY OF ITS SERVICES OR CONTENT, OR LOSS OF DATA, EVEN IF THE Solo PROJECT HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES, AND WHETHER BASED ON CONTRACT, TORT, NEGLIGENCE, PRODUCT LIABILITY, STRICT LIABILITY OR OTHERWISE.</p>
+    <p>IN NO EVENT WILL THE SOLO PROJECT BE LIABLE FOR ANY INCIDENTAL, INCIDENTAL, SPECIAL, CONSEQUENTIAL, EXEMPLARY OR INDIRECT DAMAGES ARISING OUT OF THE USE OF OR INABILITY TO USE THIS WEBSITE OR ANY OF ITS SERVICES OR CONTENT, OR LOSS OF DATA, EVEN IF THE Solo PROJECT HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES, AND WHETHER BASED ON CONTRACT, TORT, NEGLIGENCE, PRODUCT LIABILITY, STRICT LIABILITY OR OTHERWISE.</p>
 
     <h3 id="exclusion-of-limitations-and-disclaimers">EXCLUSION OF LIMITATIONS AND DISCLAIMERS</h3>
 
@@ -52,5 +58,13 @@
     <h3 id="general">General</h3>
 
     <p>These TOU, and any applicable TOS, constitute the entire agreement between each User and The Solo Project governing the User's access to and use of the website and its services, and supersede all prior agreements regarding its subject matter. The TOU shall be governed by the laws of Canada without giving effect to any principles of conflicts of laws. Each User hereby attorns and agrees to the non-exclusive jurisdiction of the courts of British Columbia, Canada. The failure by a User or The Solo Project to exercise any right or to enforce any provision of the TOU shall not constitute a waiver of such right or provision. If any provision of the TOU is found by a court of competent jurisdiction to be invalid or unenforceable, the court shall give effect to the intentions reflected in the provision to the degree possible, and the other provisions of the TOU will remain in full force and effect. It is the express will of The Solo Project and each User that the TOU and any applicable TOS have been prepared in English.</p>
+
+    <h3 id="news-disclaimer">News Disclaimer</h3>
+
+    <p>Our writers’ and journalists’ opinions are solely their own and do not reflect the opinion of The Solo Project. None of the information you read on The Solo Project should be taken as investment advice, nor does The Solo Project endorse any project that may be mentioned or linked to within our news content. Buying and trading cryptocurrencies should be considered, by you, to be a high-risk activity. We strongly encourage you to do your own due diligence and to seek the advice of a registered professional investment adviser before taking any action related to our news content. Finally, The Solo Project takes no responsibility should you lose money trading cryptocurrencies.</p>
+
+    <h3 id="changes-to-this-agreement">Changes to this Agreement</h3>
+
+    <p>The Solo Project may update these Terms and Conditions from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted.</p>
   </body>
 </html>
