Update information on block reward after hardfork v15.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<p class="lead">Adaptive Reward based on historical data - emission formula slightly decreases block reward each block as a function of all coinbase transaction amounts previously generated. Reward for blocks 1-88,000 based on a speed factor per minute of 22, resulting in a reward ranging from ~549.76 to ~548.32.</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Reward for blocks 88,001 and greater based on a speed factor per minute of 25, resulting in a reward starting at ~4,386.53 at block 88,001. See the latest <a href="http://explorer.minesolo.com/">block</a> coinbase transaction amount for the current <a href="http://explorer.minesolo.com/">block reward.</a></p>
+		<p class="lead">Reward for blocks 88,001 and greater based on a speed factor per minute of 25, resulting in a reward starting at ~4,386.53 at block 88,001. At block 227,001 the block target was changed from 60s -> 20s and thus the reward cut into 1/3, resulting in a reward starting at 1414.513079344. See the latest <a href="http://explorer.minesolo.com/">block</a> coinbase transaction amount for the current <a href="http://explorer.minesolo.com/">block reward.</a></p>
         </div>
     </div>
   </section>
