Update coin specs.

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
       <h2 class="text-center text-uppercase text-white mb-5">Specifications</h2>
       <div class="row">
         <div class="col-lg-6 ml-auto">
-          <p class="lead">PoW algorithm: CN-Adaptive v3 (with 128kb scratchpad)</p>
+          <p class="lead">PoW algorithm: CN-IO</p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Protocols: RingCT, CryptoNote, LWMA, WHM, Bulletproofs</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Block time: 60 seconds</p>
+		<p class="lead">Block time: 20 seconds</p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Difficulty: Re-targets at every block</p>
