--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <p class="lead">PoW algorithm: CN-IO</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Protocols: RingCT, CryptoNote, LWMA, WHM, Bulletproofs</p>
+		<p class="lead">Protocols: RingCT, CryptoNote, LWMA, WHM, Bulletproofs, SECOR</p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Block time: 20 seconds</p>
