Update website with information on premined funds.  These funds are controlled by NERVA developer angrywasp.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<p class="lead">Difficulty: Re-targets at every block</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Genesis block:  11/2/2018, 8:00:54 AM UTC</p>
+		<p class="lead">Genesis block:  <a href="http://explorer.minesolo.com/block.html?height=0">11/2/2018, 8:00:54 AM UTC.  Premined funds are controlled by NERVA developer angrywasp.</a></p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Max supply: ~18.5 Billion before tail emission</p>
