--- a/index.html
+++ b/index.html
@@ -81,16 +81,19 @@
 		<p class="lead">Difficulty: Re-targets at every block</p>
         </div>
         <div class="col-lg-6 mr-auto">
-		<p class="lead">Genesis block:  <a href="http://explorer.minesolo.com/block.html?height=0">11/2/2018, 8:00:54 AM UTC.  Premined funds are controlled by NERVA developer angrywasp.</a></p>
+		<p class="lead">Genesis block:  11/2/2018, 8:00:54 AM UTC</p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Max supply: ~18.5 Billion before tail emission</p>
         </div>
-        <div class="col-lg-6 mr-auto">
+       <div class="col-lg-6 mr-auto">
 		<p class="lead">Adaptive Reward based on historical data - emission formula slightly decreases block reward each block as a function of all coinbase transaction amounts previously generated. Reward for blocks 1-88,000 based on a speed factor per minute of 22, resulting in a reward ranging from ~549.76 to ~548.32.</p>
         </div>
         <div class="col-lg-6 mr-auto">
 		<p class="lead">Reward for blocks 88,001 and greater based on a speed factor per minute of 25, resulting in a reward starting at ~4,386.53 at block 88,001. At block 227,001 the block target was changed from 60s -> 20s and thus the reward cut into 1/3, resulting in a reward starting at ~1414.51. See the latest <a href="http://explorer.minesolo.com/">block</a> coinbase transaction amount for the current <a href="http://explorer.minesolo.com/">block reward.</a></p>
+	</div>
+        <div class="col-lg-6 mr-auto">
+                <p class="lead">Premine and Early Contributions: Solo is a continuation of a side project started by NERVA developer angrywasp and included a pre-mine of ~70,368, representing 0.00038% of the total supply. At block 66001 a hard fork was activated, after this time the founder no longer participated in development. At the time of the fork ~36,318,207 coins had been minted representing ~0.196% of the total supply.</p>
         </div>
     </div>
   </section>
