--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://explorer.minesolo.com/">Block Explorer</a>
           </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://wiki.minesolo.com/">Wiki</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -104,7 +107,7 @@
       <h2 class="text-center text-uppercase text-secondary mb-5">Downloads</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-v1.0.3.5-linux64.tar.gz">
+          <a href="https://minesolo.com/release/solo-v1.0.3.6-linux64.tar.gz">
           <p class="lead">Linux</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -114,13 +117,23 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-v1.0.3.5-win64.zip">
+          <a href="https://minesolo.com/release/solo-v1.0.3.6-win64.zip">
           <p class="lead">Windows</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
             </div>
             <img class="img-fluid" src="img/solo/windows_grey.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <a href="https://minesolo.com/release/solo-v1.0.3.6-macos64.zip">
+          <p class="lead">MacOS</p>
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/solo/apple_grey.png" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
