--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <h2 class="text-center text-uppercase text-secondary mb-5">Downloads</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-v1.0.3.6-linux64.tar.gz">
+          <a href="https://minesolo.com/release/solo-latest-linux64.tar.gz">
           <p class="lead">Linux</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -117,7 +117,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-v1.0.3.6-win64.zip">
+          <a href="https://minesolo.com/release/solo-latest-win64.zip">
           <p class="lead">Windows</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -127,7 +127,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-v1.0.3.6-macos64.zip">
+          <a href="https://minesolo.com/release/solo-latest-macos64.zip">
           <p class="lead">MacOS</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
