Update snapshot links to full LMDB snapshots.

--- a/index.html
+++ b/index.html
@@ -137,8 +137,18 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/blockchain.raw">
-          <p class="lead">Blockchain Snapshot</p>
+          <a href="https://minesolo.com/release/snapshot.zip">
+          <p class="lead">Blockchain Snapshot (zip)</p>
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/solo/solo_logo_white_grey.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <a href="https://minesolo.com/release/snapshot.tar.gz">
+          <p class="lead">Blockchain Snapshot (tarball)</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
