Update discord link.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <section id="contact">
     <div class="container">
       <h2 class="text-center text-uppercase text-secondary mb-5">Contact The Team</h2>
-      <a href="https://discord.gg/K62KCcm"><img class="img-fluid d-block mx-auto" src="img/Discord-Logo+Wordmark-Black.png" alt=""></a>
+      <a href="http://discord.minesolo.com/"><img class="img-fluid d-block mx-auto" src="img/Discord-Logo+Wordmark-Black.png" alt=""></a>
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
