--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Solo | Pool resistant, private cryptocurrency.</title>
+  <title>Solo | Scalable, Decentralized, Private</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -42,6 +42,9 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Specifications</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#exchange">Exchange</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Downloads</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
@@ -62,7 +65,7 @@
   <header class="masthead bg-secondary text-white text-center">
     <div class="container">
       <img class="img-fluid d-block mx-auto" src="img/solo/solo_word_logo_white.png" alt="">
-      <h2 class="font-weight-light mb-0">Pool resistant, private cryptocurrency.</h2>
+      <h2 class="font-weight-light mb-0">Scalable, Decentralized, Private</h2>
     </div>
   </header>
 
@@ -99,6 +102,12 @@
                 <p class="lead">Premine and Early Contributions: Solo is a continuation of a side project started by NERVA developer angrywasp and included a pre-mine of ~70,368, representing 0.00038% of the total supply. At block 66001 a hard fork was activated, after this time the founder no longer participated in development. At the time of the fork ~36,318,207 coins had been minted representing ~0.196% of the total supply.</p>
         </div>
     </div>
+
+  <section id="exchange">
+  <h2 class="text-center text-uppercase text-white mb-5">Exchange</h2>
+     <a href="https://www.cratex.io/"><img class="img-fluid d-block mx-auto" src="img/cratex.png" alt=""></a>
+  </section>
+
   </section>
 
   <!-- Portfolio Grid Section -->
@@ -149,6 +158,16 @@
         <div class="col-md-6 col-lg-4">
           <a href="https://minesolo.com/release/snapshot.tar.gz">
           <p class="lead">Blockchain Snapshot (tarball)</p>
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              </div>
+            </div>
+            <img class="img-fluid" src="img/solo/solo_logo_white_grey.png" alt="">
+          </a>
+        </div>
+        <div class="col-md-6 col-lg-4">
+          <a href="https://minesolo.com/release/snapshot.7z">
+          <p class="lead">Blockchain Snapshot (7z)</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
@@ -211,7 +230,7 @@
 	  <a href="https://gitlab.com/solo-project/solo/"><img width=100 src="img/gitlab_white.png" alt=""></a>
         </div>
         <div class="col-md-4 mb-5 mb-lg-0">
-          <h4 class="text-uppercase mb-4">Around the Web</h4>
+          <h4 class="text-uppercase mb-4">Around The Web</h4>
           <ul class="list-inline mb-0">
             <li class="list-inline-item">
               <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.twitter.com/SoloXsl/">
