Add TradeCX and FirstCryptoBank to Exchanges.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 
   <section id="exchange">
   <h2 class="text-center text-uppercase text-white mb-5">Exchange</h2>
-     <a href="https://www.cratex.io/"><img class="img-fluid d-block mx-auto" src="img/cratex.png" alt=""></a>
+     <a href="https://cratex.io/index.php?pair=XSL/BTC"><img class="img-fluid d-block mx-auto" src="img/cratex.png" alt=""></a>
+     <a href="https://tradecx.io/markets/xslbtc"><img height=100 class="img-fluid d-block mx-auto" src="img/tradecx.png" alt=""></a>
+     <a href="https://fcbaccount.com/fcb/exchange/BTC/XSL"><img height=100 class="img-fluid d-block mx-auto" src="img/fcb.png" alt=""></a>
   </section>
 
   </section>
