Update linux download link, remove tarball for snapshot.  Only .zip / .7z snapshots now.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://explorer.minesolo.com/">Block Explorer</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://explorer.minesolo.com/">Block Explorer</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://wiki.minesolo.com/">Wiki</a>
@@ -107,7 +107,7 @@
   <h2 class="text-center text-uppercase text-white mb-5">Exchange</h2>
      <a href="https://cratex.io/index.php?pair=XSL/BTC"><img class="img-fluid d-block mx-auto" src="img/cratex.png" alt=""></a>
      <a href="https://tradecx.io/markets/xslbtc"><img height=100 class="img-fluid d-block mx-auto" src="img/tradecx.png" alt=""></a>
-     <a href="https://fcbaccount.com/fcb/exchange/BTC/XSL"><img height=100 class="img-fluid d-block mx-auto" src="img/fcb.png" alt=""></a>
+     <a href="https://fcbaccount.com/fcb/exchange/XSL/BTC"><img height=100 class="img-fluid d-block mx-auto" src="img/fcb.png" alt=""></a>
   </section>
 
   </section>
@@ -118,7 +118,7 @@
       <h2 class="text-center text-uppercase text-secondary mb-5">Downloads</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-latest-linux64.tar.gz">
+          <a href="https://minesolo.com/release/solo-latest-linux64.zip">
           <p class="lead">Linux</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -150,16 +150,6 @@
         <div class="col-md-6 col-lg-4">
           <a href="https://minesolo.com/release/snapshot.zip">
           <p class="lead">Blockchain Snapshot (zip)</p>
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-              </div>
-            </div>
-            <img class="img-fluid" src="img/solo/solo_logo_white_grey.png" alt="">
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/snapshot.tar.gz">
-          <p class="lead">Blockchain Snapshot (tarball)</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
               </div>
