--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <h2 class="text-center text-uppercase text-secondary mb-5">Downloads</h2>
       <div class="row">
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-latest-linux64.zip">
+          <a href="https://files.minesolo.com/solo-latest-linux64.zip">
           <p class="lead">Linux</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -128,7 +128,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-latest-win64.zip">
+          <a href="https://files.minesolo.com/solo-latest-win64.zip">
           <p class="lead">Windows</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -138,7 +138,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/solo-latest-macos64.zip">
+          <a href="https://files.minesolo.com/solo-latest-macos64.zip">
           <p class="lead">MacOS</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -148,7 +148,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/snapshot.zip">
+          <a href="https://files.minesolo.com/snapshot.zip">
           <p class="lead">Blockchain Snapshot (zip)</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -158,7 +158,7 @@
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
-          <a href="https://minesolo.com/release/snapshot.7z">
+          <a href="https://files.minesolo.com/snapshot.7z">
           <p class="lead">Blockchain Snapshot (7z)</p>
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
               <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
