contant -> content for code readibility. Remove .bak files

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Bulletproofs, SECOR</h3>
 </div>
 <div class="row">
 <div class="col-md-6">
-<div class="features-contant">
+<div class="features-content">
 
 Adaptive Reward based on historical data - emission formula slightly decreases block reward each block as a function of all coinbase transaction amounts previously generated. Reward for blocks 1-88,000 based on a speed factor per minute of 22, resulting 
 in a reward ranging from ~549.76 to ~548.32.<br><br>
@@ -299,11 +299,11 @@ Reward for blocks 88,001 and greater based on a speed factor per minute of 25, r
 <div class="road-map"></div>
 <div class="road-map-line">
 
-<div class="road-map-contant">
+<div class="road-map-content">
 <div class="roadmap-date">2018</div>
-<div class="road-map-contant-sec">
+<div class="road-map-content-sec">
 <div class="month-info">November / December</div>
-<div class="map-contant">
+<div class="map-content">
 <ul>
 <li>Discord in operation</li>
 <li>Seed nodes in operation</li>
@@ -317,11 +317,11 @@ node banning issues, stabilizing network</li>
 </div>
 
 
-<div class="road-map-contant">
+<div class="road-map-content">
 <div class="roadmap-date">2019</div>
-<div class="road-map-contant-sec-right">
+<div class="road-map-content-sec-right">
 <div class="month-info-right">January / February</div>
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>Emissions Schedule changed at block 88,001 - inspired by Bitcoin</li>
 <li>Code rebase from Masari/NERVA upstream</li>
@@ -336,12 +336,12 @@ further stabilizing network</li>
 </div>
 </div>
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec">
+<div class="road-map-content">
+<div class="road-map-content-sec">
 <div class="month-info2">March</div>
 
 
-<div class="map-contant">
+<div class="map-content">
 <ul>
 
 <li>Logos/Branding created</li>
@@ -353,7 +353,7 @@ further stabilizing network</li>
 </ul>
 </div>
 
-<div class="map-contant-sm">
+<div class="map-content-sm">
 <ul>
 <li>v15 Hardfork Scheduled for block 227,001</li>
 <li>SECOR (Uncle Mining) - Increased chain security,<br> allows for faster
@@ -371,10 +371,10 @@ threads added from Monero upstream</li>
 </div>
 
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec-right">
+<div class="road-map-content">
+<div class="road-map-content-sec-right">
 <div class="month-info-right2">April</div>
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>SoloPay (Herb) the Discord tipbot launched with lotto functionality</li>
 <li>Solo Wiki launched, to become documentation and FAQ repository</li>
@@ -382,7 +382,7 @@ threads added from Monero upstream</li>
 </ul>
 </div>
 
-<div class="map-contant-sm-right">
+<div class="map-content-sm-right">
 <ul>
 <li>Vulnerability Patch</li>
 <li>Logging improvements - Uncle Mining messages moved to a higher verbose level</li>
@@ -390,26 +390,26 @@ threads added from Monero upstream</li>
 </ul>
 </div>
 
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>v1.0.3.7 released</li>
 </ul>
 </div>
 
-<div class="map-contant-sm-right">
+<div class="map-content-sm-right">
 <ul>
 <li>Logging improvements - node blocking messages moved to higher verbose level</li>
 <li>Block versions < v1.0.3.6</li>
 </ul>
 </div>
 
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>v1.0.3.8 released</li>
 </ul>
 </div>
 
-<div class="map-contant-sm-right">
+<div class="map-content-sm-right">
 <ul>
 <li>Block versions < v1.0.3.7, malicious client detected using v1.0.3.6</li>
 <li>Logging improvements - additional messages moved to higher verbose level</li>
@@ -419,16 +419,16 @@ threads added from Monero upstream</li>
 </div>
 </div>
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec">
+<div class="road-map-content">
+<div class="road-map-content-sec">
 <div class="month-info2" style="padding-right:120px;">May</div>
-<div class="map-contant">
+<div class="map-content">
 <ul>
 <li>v1.0.4.0 released, Hardfork v17 set for block 350001</li>
 </ul>
 </div>
 
-<div class="map-contant-sm">
+<div class="map-content-sm">
 <ul>
 <li>DAA Window adjusted to 400 blocks from 180 in v17</li>
 <li>Change CRYPTONOTE_DEFAULT_TX_SPENDABLE_AGE to 20</li>
@@ -436,24 +436,24 @@ threads added from Monero upstream</li>
 </ul>
 </ul>
 </div>
-<div class="map-contant">
+<div class="map-content">
 <ul>
 <li>v1.0.4.1, v1.0.4.2, and v1.0.4.3 released</li>
 </ul>
 </div>
-<div class="map-contant-sm">
+<div class="map-content-sm">
 <ul>
 <li>Remove obsolete functions</li>
 <li>General code cleanup</li>
 <li>Minimum version banning feature removed</li>
 </ul>
 </div>
-<div class="map-contant">
+<div class="map-content">
 <ul>
 <li>v1.0.4.4 released, Hardfork v18 set for Block 440001</li>
 </ul>
 </div>
-<div class="map-contant-sm">
+<div class="map-content-sm">
 <ul>
 <li>Update DAA to latest LWMA1 (negative timestamp fix)</li>
 <li>Cleanup checkpoints, Remove obsolete code</li>
@@ -463,23 +463,23 @@ threads added from Monero upstream</li>
 </div>
 </div>
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec-right">
+<div class="road-map-content">
+<div class="road-map-content-sec-right">
 <div class="month-info-right2">June</div>
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>v1.0.4.5 and v1.0.4.6 released</li>
 </ul>
 </div>
 
-<div class="map-contant-sm-right">
+<div class="map-content-sm-right">
 <ul>
 <li>Merge in contrib/depends from Monero upstream</li>
 <li>Increase db_readers default 126 -> 1024. This helps on<br>high core/thread count CPUs and multi-socket platforms.</li>
 </ul>
 </div>
 
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 <li>Implement Gitlab CI for signed releases</li>
 <li>ARMHF and ARM64 binaries released</li>
@@ -488,17 +488,17 @@ threads added from Monero upstream</li>
 </div>
 </div>
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec">
+<div class="road-map-content">
+<div class="road-map-content-sec">
 <div class="month-info2" style="padding-right:120px;">July</div>
-<div class="map-contant">
+<div class="map-content">
 <ul>
 <li>New website launched and roadmap released</li>
 <li>v1.0.4.7 and v1.0.4.8 released</li>
 </ul>
 </div>
 
-<div class="map-contant-sm">
+<div class="map-content-sm">
 <ul>
 <li>Merge in blockchain-export/import fixes <br>  from Masari upstream for Uncle blocks</li>
 <li>General code cleanup/optimization</li>
@@ -515,10 +515,10 @@ threads added from Monero upstream</li>
 </div>
 
 
-<div class="road-map-contant">
-<div class="road-map-contant-sec-right">
+<div class="road-map-content">
+<div class="road-map-content-sec-right">
 <div class="month-info-right">Future Development</div>
-<div class="map-contant-right">
+<div class="map-content-right">
 <ul>
 
 <li>Port GUI wallet from Monero</li>
