Update roadmap items.

--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@ threads added from Monero upstream</li>
 <div class="month-info2" style="padding-right:120px;">May</div>
 <div class="map-content">
 <ul>
+<li>Solo listed on two exchanges for trading<br>(CRATEX and FirstCryptoBank)</li>
 <li>v1.0.4.0 released, Hardfork v17 set for block 350001</li>
 </ul>
 </div>
@@ -457,7 +458,7 @@ threads added from Monero upstream</li>
 <ul>
 <li>Update DAA to latest LWMA1 (negative timestamp fix)</li>
 <li>Cleanup checkpoints, Remove obsolete code</li>
-<li>Release DAA (Difficulty Adjustment Algorithm) <a href="https://steemit.com/cryptocurrency/@rtmoney/solo-difficulty-adjustment-algorithm-changes-versions-16-18">research.</a></li>
+<li>Release DAA (Difficulty Adjustment Algorithm) <a href="https://steemit.com/cryptocurrency/@rtmoney/solo-difficulty-adjustment-algorithm-changes-versions-16-18">research</a></li>
 
 </ul>
 </div>
@@ -468,6 +469,7 @@ threads added from Monero upstream</li>
 <div class="month-info-right2">June</div>
 <div class="map-content-right">
 <ul>
+<li>Solo listed for trading at exchange TradeCX</li>
 <li>v1.0.4.5 and v1.0.4.6 released</li>
 </ul>
 </div>
@@ -521,9 +523,13 @@ threads added from Monero upstream</li>
 <div class="map-content-right">
 <ul>
 
-<li>Port GUI wallet from Monero</li>
+<li>Listing and voting at additional exchanges</li>
+<li>GUI Wallet and one click miner</li>
 <li>Port Web wallet from Masari</li>
-<li>Develop iOS/Android wallets</li>
+<li>Develop iOS/Android mobile apps</li>
+<li>Blockchain based messaging feature</li>
+<li>Technical whitepaper on CN-IO</li>
+<li>Benchmark Mode - Feature will allow user to benchmark device <br> hashrates and cryptographically publish results to the blockchain</li>
 </ul>
 </div>
 </div>
