Add wiki link, update specs link to gitlab wiki.  Update roadmap.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                                                     <a class="nav-link js-scroll-trigger" href="#roadmap">Roadmap</a>
                                                 </li>
                                                 <li class="nav-item">
+                                                    <a class="nav-link js-scroll-trigger" href="https://gitlab.com/solo-project/solo/wikis/home">Wiki</a>
+                                                </li>
+                                                <li class="nav-item">
                                                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                                                 </li>
                                             </ul>
@@ -176,7 +179,7 @@ Emissions Curve: Non-linear to eliminate disruptive halving events <br></p><p>
 
 Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 
-<a href="http://wiki.minesolo.com/doku.php?id=specifications">Detailed Technical Specifications</a></p><p>
+<a href="https://gitlab.com/solo-project/solo/wikis/Specifications">Detailed Technical Specifications</a></p><p>
 </p></div>
 </div>
 
@@ -475,6 +478,32 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 	<li>Remove AES_NI check for non-AES builds</li>
 	<li>CLI Wallet logging improvements</li>
 	<li>Compile time build tests</li>
+	</ul>
+	</div>
+</ul></div>
+</div>
+</div>
+
+<div class="road-map-content">
+<div class="road-map-content-sec">
+	<div class="month-info2" style="padding-right:110px;">August</div>
+</div>
+<div class="road-map-content-sec-right">
+<div class="map-content-right">
+<ul>
+<li>Submitted PR to list Solo at <a href="https://bisq.network/">Bisq</a></li>
+<li>v1.1.0.0 'Carbonite' Released</li>
+	<div class="map-content-sm-right">
+	<ul>
+	<li>Major rebase from Monero v0.14.1.0 upstream</li>
+	<li>Trezor Model T support</li>
+	<li>Ledger Support up to Nano X</li>
+	<li>Experimental TOR/I2P/SOCKS support</li>
+	<li>Syncing speed and reliability improvements</li>
+        <li>Cold signing support</li>
+        <li>Multisig Messaging System</li>
+        <li>Cold signing/storage support</li>
+        <li>Added riscv64 support</li>
 	</ul>
 	</div>
 </ul></div>
