Add bisq to exchange section.

--- a/index.html
+++ b/index.html
@@ -197,19 +197,24 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
             <div class="container">
                 <div class="heading">Exchange</div>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="exchange-logo">
                             <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/exchange-logo1.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="exchange-logo">
                             <a href="https://fcbaccount.com/fcb/exchange/XSL/BTC"><img src="images/exchange-logo2.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="exchange-logo">
                             <a href="https://tradecx.io/markets/xslbtc"><img src="images/exchange-logo3.png"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="exchange-logo">
+                            <a href="https://bisq.network/"><img src="images/exchange-logo4.png"></a>
                         </div>
                     </div>
                 </div>
@@ -491,8 +496,8 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
 <div class="road-map-content-sec-right">
 <div class="map-content-right">
 <ul>
-<li>Submitted PR to list Solo at <a href="https://bisq.network/">Bisq</a></li>
-<li>v1.1.0.0 'Carbonite' Released</li>
+<li>Solo listed at <a href="https://bisq.network/">Bisq</a></li>
+<li>v1.1.0.1 'Carbonite' Released</li>
 	<div class="map-content-sm-right">
 	<ul>
 	<li>Major rebase from Monero v0.14.1.0 upstream</li>
