Add bia.do link in exchange section.

--- a/index.html
+++ b/index.html
@@ -197,24 +197,29 @@ Reward: Slightly decreases each block to encourage early adoption <br></p><p>
             <div class="container">
                 <div class="heading">Exchange</div>
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/exchange-logo1.png"></a>
+                            <a href="https://cratex.io/index.php?pair=XSL/BTC"><img src="images/cratex.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://fcbaccount.com/fcb/exchange/XSL/BTC"><img src="images/exchange-logo2.png"></a>
+                            <a href="https://bisq.network/"><img src="images/bisq.png"></a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://tradecx.io/markets/xslbtc"><img src="images/exchange-logo3.png"></a>
+                            <a href="https://bia.do/trade/XSL-XMR"><img width=240 src="images/biado-dark-path.plain.svg"></a>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <div class="exchange-logo">
-                            <a href="https://bisq.network/"><img src="images/exchange-logo4.png"></a>
+                            <a href="https://fcbaccount.com/fcb/exchange/XSL/BTC"><img src="images/fcb.png"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="exchange-logo">
+                            <a href="https://tradecx.io/markets/xslbtc"><img src="images/tradecx.png"></a>
                         </div>
                     </div>
                 </div>
